Se proporcionan los archivos necesarios para ejecutar el código. Además se incluye el código en ipynb y  py.

--- a/AlgoritmoRedNeuronalTrilateracion.ipynb
+++ b/AlgoritmoRedNeuronalTrilateracion.ipynb
@@ -3,16 +3,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/SM-555/NeuralNetworkTrilateration/blob/main/AlgoritmoRedNeuronalTrilateracion.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "e2c014rXNHA4"
       },
       "source": [
@@ -1374,8 +1364,7 @@
   ],
   "metadata": {
     "colab": {
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3 (ipykernel)",
